# src/main/java/org/testdashboard/api/impl/UploadApiDelegateImpl.java
@@ -3,7 +3,7 @@ package org.testdashboard.api.impl;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Component;
+import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 import org.testdashboard.api.UploadApiDelegate;
 import org.testdashboard.model.ResponseDTO;
@@ -12,16 +12,16 @@ import org.testdashboard.model.ResponseDTO;
  * @author Arne
  * @since 26/11/2017
  */
-@Component
+@RestController
 public class UploadApiDelegateImpl implements UploadApiDelegate {
 
     @Override
-    public ResponseEntity<ResponseDTO> upload(MultipartFile upfile, Long projectId, Long externalTestRunId) {
+    public ResponseEntity<ResponseDTO> upload(MultipartFile file, String externalProjectId, String externalTestRunId) {
 
         String code = "200";
 
-        String message = "Successfully uploaded - " +
-                upfile.getOriginalFilename();
+        String message = "You uploaded a file with name " + file.getOriginalFilename() + " with externalProjectId = " +
+                externalProjectId + " and externalTestRunId = " + externalTestRunId;
 
         ResponseDTO responseDTO = new ResponseDTO().message(message).code(code);
 
